; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_script_set_property_bool.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_script_set_property_bool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.script_ctx = type { i32 }

@MPV_FORMAT_FLAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @script_set_property_bool to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @script_set_property_bool(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.script_ctx*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call %struct.script_ctx* @get_ctx(i32* %6)
  store %struct.script_ctx* %7, %struct.script_ctx** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i8* @luaL_checkstring(i32* %8, i32 1)
  store i8* %9, i8** %4, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_toboolean(i32* %10, i32 2)
  store i32 %11, i32* %5, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = load %struct.script_ctx*, %struct.script_ctx** %3, align 8
  %14 = getelementptr inbounds %struct.script_ctx, %struct.script_ctx* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* @MPV_FORMAT_FLAG, align 4
  %18 = call i32 @mpv_set_property(i32 %15, i8* %16, i32 %17, i32* %5)
  %19 = call i32 @check_error(i32* %12, i32 %18)
  ret i32 %19
}

declare dso_local %struct.script_ctx* @get_ctx(i32*) #1

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i32 @lua_toboolean(i32*, i32) #1

declare dso_local i32 @check_error(i32*, i32) #1

declare dso_local i32 @mpv_set_property(i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
